--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -1,8 +1,8 @@
-name: MSBuild
+name: Pull
 
 on:
-  push:
-    branches: [ master ]
+  #push:
+   # branches: [ master ]
   pull_request:
     branches: [ master ]
 
