--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,6 +19,19 @@ permissions:
   contents: read
 
 jobs:
+  lint:
+    runs-on: windows-latest
+    steps:
+    - name: RunLint
+      working-directory: ${{env.GITHUB_WORKSPACE}}
+      run: echo LINT
+  test:
+    runs-on: windows-latest
+    steps:
+    - name: RunTest
+      working-directory: ${{env.GITHUB_WORKSPACE}}
+      run: echo TEST
+
   build:
     runs-on: windows-latest
 
