--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -27,6 +27,7 @@ jobs:
       run: echo LINT
   test:
     runs-on: windows-latest
+    needs: [build, lint]
     steps:
     - name: RunTest
       working-directory: ${{env.GITHUB_WORKSPACE}}
