--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -29,9 +29,11 @@ jobs:
     runs-on: windows-latest
     needs: [build, lint]
     steps:
-    - name: RunTest
-      working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: echo TEST
+      - name: Setup VSTest.exe
+        uses: Malcolmnixon/Setup-VSTest@v4
+      - name: RunTests
+        working-directory: ${{env.GITHUB_WORKSPACE}}
+        run: VSTest.Console.exe Debug\UnitTest1.dll
 
   build:
     runs-on: windows-latest
