--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -53,3 +53,9 @@ jobs:
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
+    - name: uploadBinaries
+      uses: actions/upload-artifacts@v3
+      with:
+          name: my-artifact
+          path: x64/Release/
+          if-no-files-found: error #'warn' or 'ignore' are also available , defaults to warn
