--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -29,6 +29,12 @@ jobs:
     runs-on: windows-latest
     needs: [build, lint]
     steps:
+      - name: uploadBinaries
+        uses: actions/upload-artifact@v3
+        with:
+          name: my-artifact
+          path: x64\Release\
+          if-no-files-found: error
       - name: Setup VSTest.exe
         uses: Malcolmnixon/Setup-VSTest@v4
       - name: RunTests
@@ -57,5 +63,5 @@ jobs:
       uses: actions/upload-artifacts@v3
       with:
           name: my-artifact
-          path: x64/Release/
+          path: x64\Release\
           if-no-files-found: error #'warn' or 'ignore' are also available , defaults to warn
